# OgreProject

./: AdvancedOgreFramework.cpp  AdvancedOgreFramework.hpp  AppStateManager.cpp  DotSceneLoader.hpp  GameState.cpp  Makefile.am  PauseState.cpp  configure.ac  main.cpp  plugins.cfg  resources.cfg
